# open-build-service-rs

./: Cargo.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml
obsctl/: Cargo.toml
obsctl/src/: main.rs
open-build-service-api/: .swp  Cargo.toml
open-build-service-api/examples/: obsapi.rs
open-build-service-api/src/: lib.rs
open-build-service-api/tests/: integration.rs
open-build-service-mock/: Cargo.toml
open-build-service-mock/src/: lib.rs
open-build-service-mock/src/api/: build.rs  mod.rs  source.rs
oscrc/: Cargo.toml
oscrc/src/: lib.rs
