[package]
name = "obsctl"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open-build-service-api = { path = "../open-build-service-api" }
oscrc = { path = "../oscrc" }
url = { version = "2.5.4", features = [ "serde" ] }
structopt = "0.3.21"
anyhow = "1.0.40"
tokio = { version = "1.35.0", features = [ "full" ] }
