[package]
name = "open-build-service-api"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = [ "stream" ] }
url = "2.2.1"
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
serde = { version = "1", features = [ "derive" ] }
chrono = { version = "0.4", features = [ "serde" ] }
thiserror = "1.0.24"
futures = "0.3.14"
bytes = "1.0.1"

[dev-dependencies]
open-build-service-api = { path = "../open-build-service-api" }
oscrc = { path = "../oscrc" }
url = { version = "2.2", features = [ "serde" ] }
structopt = "0.3.21"
anyhow = "1.0.40"
tokio = { version = "1.5.0", features = [ "full" ] }
