[package]
name = "open-build-service-mock"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.1", features = ["std"] }
http = "1.2.0"
md-5 = "0.10"
quick-xml = { version = "0.23.1", features = [ "serialize" ] }
rand = "0.8.5"
serde = "1.0.125"
strum = "0.23"
strum_macros = "0.23"
xml-builder = "=0.5.3"
wiremock = "0.6.2"
base64ct = { version = "1.6.0", features = ["std"] }
