[package]
name = "oscrc"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125",features = [ "derive" ] }
serde_ini = "0.2.0"
secret-service = "2.0.1"
url = { version = "2.5.4", features = [ "serde" ] }
thiserror = "1.0.24"
