[package]
name = "oscrc"
version = "0.2.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2024"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217",features = [ "derive" ] }
serde_ini = "0.2.0"
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
tokio = { version = "1", features = ["fs"] }
url = { version = "2.5.4", features = [ "serde" ] }
thiserror = "2.0.12"
